@@ -5,6 +5,8 @@ be triggered once for a given notification." Curator was breaking this guarantee
 new Watcher object each time one was needed. This is now fixed and ZooKeeper's guarantee is restored. Big
 thanks to user barkbay for his persistence and help on this.
 
+* Issue 247: POST_INITIALIZED_EVENT wasn't correctly handling an initially empty node.
+
 1.3.1 - January 28, 2013
 ========================
 * Tightened up a possible race deep inside the connection management.
